[package]
name = "firmware"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bare-metal = "1.0"
cortex-m = "0.7"
cortex-m-rt = "0.7"
panic-halt = "0.2"
usb-device = "0.2"
usbd-serial = "0.1"
stm32f0xx-hal = {version = "*", features = ["stm32f042", "rt", "stm32-usbd"]}

[profile.dev]
lto = true

[profile.release]
lto = true
#debug = false
opt-level = "s"